implemented unit of work pattern

--- a/MyWebsite/Views/Budgets/AddTransaction.cshtml
+++ b/MyWebsite/Views/Budgets/AddTransaction.cshtml
@@ -59,7 +59,7 @@
 
 @*View Transactions*@
 <div class="container center" style="margin-top:35px; margin-bottom:250px;">
-    <h5 style="margin-top:55px; margin-bottom:25px; font-weight:bold; color:#cfd8dc; text-align:center">Past Transactions</h5>
+    <h5 style="margin-top:55px; margin-bottom:25px; font-weight:bold; color:#cfd8dc; text-align:center">Transactions</h5>
     <a class="waves-effect waves-light lightBrown-hover btn-large sharpCorners grey darken-4" id="transaction-btnG" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">local_dining</i>Grocery</a>
         <table class="table" id="transactionsG" align="center" style="display:none; width:25%; margin-bottom:25px;">
             <tr style="border-bottom: 1px dotted #cfd8dc">
