--- a/MyWebsite/Views/Budgets/BudgetInsights.cshtml
+++ b/MyWebsite/Views/Budgets/BudgetInsights.cshtml
@@ -97,13 +97,13 @@
         @*TAB THREE*@
         <div style="margin-top: 20px; background-color: #080C10; font-size: 20px;" id="tab3" class="col s12 white-text flow-text waves-ripple">
             <div class="row">
-                <div class="col s12 m7" style="float: right">
-                    <button id="food" class="waves-effect waves-light btn-large lightBrown-hover sharpCorners" style="background-color:#54b798; font-weight:bold; font-size:10px;"><i class="material-icons left">local_dining</i>Food</button>
-                    <button id="housing" class="waves-effect waves-light btn-large lightBrown-hover sharpCorners" style="background-color:#54b798; font-weight:bold; font-size:10px;"><i class="material-icons left">home</i>Housing</button>
-                    <button id="bills" class="waves-effect waves-light btn-large lightBrown-hover sharpCorners" style="background-color:#54b798; font-weight:bold; font-size:10px;"><i class="material-icons left">monetization_on</i>Bills | Payments</button>
-                    <button id="entertainment" class="waves-effect waves-light btn-large lightBrown-hover sharpCorners" style="background-color:#54b798; font-weight:bold; font-size:10px;"><i class="material-icons left">local_activity</i>Entertainment</button>
-                    <button id="gas" class="waves-effect waves-light btn-large lightBrown-hover sharpCorners" style="background-color:#54b798; font-weight:bold; font-size:10px;"><i class="material-icons left">drive_eta</i>Gas | Auto</button>
-                    <button id="misc" class="waves-effect waves-light btn-large lightBrown-hover sharpCorners" style="background-color:#54b798; font-weight:bold; font-size:10px;"><i class="material-icons left">gesture</i>Misc</button>
+                <div class="col s12 m8" style="float: right">
+                    <button id="food" class="waves-effect waves-light btn-large lightBrown-hover sharpCorners" style="background-color:#54b798; font-weight:bold; font-size:13px; margin-top: 5px;"><i class="material-icons left">local_dining</i>Food</button>
+                    <button id="housing" class="waves-effect waves-light btn-large lightBrown-hover sharpCorners" style="background-color:#54b798; font-weight:bold; font-size:13px; margin-top: 5px;"><i class="material-icons left">home</i>Housing</button>
+                    <button id="bills" class="waves-effect waves-light btn-large lightBrown-hover sharpCorners" style="background-color:#54b798; font-weight:bold; font-size:13px; margin-top: 5px;"><i class="material-icons left">monetization_on</i>Bills | Payments</button>
+                    <button id="entertainment" class="waves-effect waves-light btn-large lightBrown-hover sharpCorners" style="background-color:#54b798; font-weight:bold; font-size:13px; margin-top: 5px;"><i class="material-icons left">local_activity</i>Entertainment</button>
+                    <button id="gas" class="waves-effect waves-light btn-large lightBrown-hover sharpCorners" style="background-color:#54b798; font-weight:bold; font-size:13px; margin-top: 5px;"><i class="material-icons left">drive_eta</i>Gas | Auto</button>
+                    <button id="misc" class="waves-effect waves-light btn-large lightBrown-hover sharpCorners" style="background-color:#54b798; font-weight:bold; font-size:13px; margin-top: 5px;"><i class="material-icons left">gesture</i>Misc</button>
 
                     
                 </div>
