--- a/MyWebsite/Views/Budgets/ExportExcel.cshtml
+++ b/MyWebsite/Views/Budgets/ExportExcel.cshtml
@@ -1,5 +1,4 @@
 ﻿
 
-<div style="text-align:center; margin-top:80px;"><p style="text-align:center;">@Html.Partial("_LoginPartial", 1)</p></div>
-<h3 style="text-align:center; margin-top:100px;">The Painless Budget</h3>
-<div style="border-bottom: 1px dotted #cfd8dc;"></div>
+<div class="partialLoginText"><p>@Html.Partial("_LoginPartial", 1)</p></div>
+<h3 class="painlessBudgetTitle">The Painless Budget</h3>
