--- a/MyWebsite/Views/Budgets/PastBudgets.cshtml
+++ b/MyWebsite/Views/Budgets/PastBudgets.cshtml
@@ -2,14 +2,13 @@
 
 @{var user = User.Identity.Name;}
 
-<div style="text-align:center; margin-top:100px;"><p style="text-align:center;">@Html.Partial("_LoginPartial", 1)</p></div>
-
-<h3 style="text-align:center; margin-top:100px; text-decoration: underline">The Painless Budget</h3>
+<div class="painlessBudgetTitle"><p>@Html.Partial("_LoginPartial", 1)</p></div>
+<h3 class="painlessBudgetTitle">The Painless Budget</h3>
 
 <div class="container">
     <div style="margin-top:25px; text-align:center;">
         <p style="text-align:center; font-weight:bold; color:#81cac4; margin-top:10px;">@ViewBag.Deleted</p>
-        <a href='@Url.Action("Index", "Budgets", new { userName = user })' ; class="waves-effect waves-light lightBrown-hover btn-large sharpCorners grey darken-4" style="font-weight:bold; font-size:20px;"><i class="material-icons left">arrow_back</i>Return to Budget</a>
+        <a href='@Url.Action("Index", "Budgets", new { userName = user })' ; class="waves-effect waves-light underline-hover btn-large grey darken-4" style="font-weight:bold; font-size:20px;"><i class="material-icons left">arrow_back</i>Return to Budget</a>
     </div>
 
     <h4 style="margin-top:55px; margin-bottom:25px; font-weight:bold; color:#cfd8dc; text-align:center">Past Budgets</h4>
@@ -18,7 +17,7 @@
     <div style="text-align: center;">
         @foreach (var month in ViewBag.BudgetMonthList)
         {
-            <button id=@month class="waves-effect waves-light lightBrown-hover btn-large sharpCorners grey darken-4" style="font-weight: bold; font-size: 20px; margin-top: 10px;">@month</button>
+            <button id=@month class="waves-effect waves-light underline-hover btn-large grey darken-4" style="font-weight: bold; font-size: 20px; margin-top: 10px;">@month</button>
         }
     </div>
 </div>
