--- a/MyWebsite/Views/Projects/Index.cshtml
+++ b/MyWebsite/Views/Projects/Index.cshtml
@@ -1,20 +1,11 @@
 ﻿@*Project Directory*@
 
-@{
-    var painlessBudgetInfo = "A user friendly budget app that lets users add, delete, and track purchases, set budget limits, and view past budgets and spending insights. User can choose to save their budget as an Excel file for easy tracking.";
-}
-
-}
-
-
 <div style="margin: 50px;">
-    <h3 style="margin-top:100px; text-align:center; padding-bottom:10px; text-decoration:  underline">PROJECTS</h3>
-
-    <p style="text-align:center"><a href="https://www.linkedin.com/in/jordynrachelthompson/" target="_blank"><i id="gitHubIcon" style="color: #525e78; font-size: 50px;" class="fab fa-github z-depth-5"></i></a></p>
-
-    <div class="container center-div z-depth-5" style="background-color:#020305; margin-top:50px; text-align:center; width:75%; padding:10px; border: .5px dotted #cfd8dc;">
-        <ul id="project-list">
-            <li style="text-decoration: underline; font-size: 25px;"><a href='@Url.Action("Index", "Budgets")' class="purple-hover"><span id="painlessBudget">The Painless Budget</span></a></li>
+    <h3 class="underlineTitle">PROJECTS</h3>
+    <p style="text-align: center"><a href="https://www.linkedin.com/in/jordynrachelthompson/" target="_blank"><i id="gitHubIcon" style="color: #525e78; font-size: 50px;" class="fab fa-github z-depth-5"></i></a></p>
+    <div class="container center-div z-depth-5 darkBox">
+        <ul>
+            <li><a href='@Url.Action("Index", "Budgets")' class="purple-hover">The Painless Budget</a></li>
         </ul>
     </div>
 </div>
