--- a/MyWebsite/Views/Budgets/AddTransaction.cshtml
+++ b/MyWebsite/Views/Budgets/AddTransaction.cshtml
@@ -6,16 +6,17 @@
 }
 
 
-<div style="text-align:center; margin-top:100px;"><p style="text-align:center;">@Html.Partial("_LoginPartial", 1)</p></div>
-<h3 style="text-align:center; margin-top:100px; text-decoration: underline">The Painless Budget</h3>
-
+<div class="partialLoginText"><p>@Html.Partial("_LoginPartial", 1)</p></div>
+<h3 class="painlessBudgetTitle">The Painless Budget</h3>
 
 <div class="container">
     <div style="margin-top: 25px; text-align: center;">
         <p style="text-align:center; font-weight:bold; color:#54b798; margin-top:10px;">@ViewBag.Deleted</p>
-        <a href='@Url.Action("Index", "Budgets")'; class="waves-effect waves-light btn-large sharpCorners lightBrown-hover grey darken-4" style="font-weight: bold; font-size: 20px;"><i class="material-icons left">arrow_back</i>Return to Budget</a>
+        <a href='@Url.Action("Index", "Budgets")'; class="waves-effect waves-light btn-large underline-hover grey darken-4" style="font-weight: bold; font-size: 20px;"><i class="material-icons left">arrow_back</i>Return to Budget</a>
     </div>
+
     <h4 style="margin-top:55px; margin-bottom:25px; font-weight:bold; text-align:center">Add Transaction</h4>
+
     @*Validation Errors*@
     <div class="container" style="margin-top:20px;">
         <p style="font-weight:bold; color:#D50000; text-align:center">@ViewBag.typeError</p>
@@ -50,7 +51,7 @@
                 @Html.Hidden("TypeOfBudget", "TypeOfBudget")
                 @Html.Hidden("Date", DateTime.Now)
                 @Html.Hidden("Month", budgetMonth)
-                <div style="margin-top:23px;"><h5><b>4. Save</b></h5> <button type="submit" class="btn-floating btn-large waves-effect waves-light blue-grey lighten-4 purple-hover"><i class="material-icons add-btn" style="font-weight:bold; color: #212121 !important;">library_add</i></button></div>
+                <div style="margin-top:23px;"><h5><b>4. Save</b></h5> <button type="submit" class="btn-floating btn-large waves-effect waves-light blue-grey lighten-4"><i id="saveBtn" class="far fa-save" style="font-weight:bold; color: #212121 !important;"></i></button></div>
             </div>
         </form>
         <div class="col s12 m12 l4"></div>
@@ -60,7 +61,7 @@
 @*View Transactions*@
 <div class="container center" style="margin-top:35px; margin-bottom:250px;">
     <h5 style="margin-top:55px; margin-bottom:25px; font-weight:bold; color:#cfd8dc; text-align:center">Transactions</h5>
-    <a class="waves-effect waves-light lightBrown-hover btn-large sharpCorners grey darken-4" id="transaction-btnG" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">local_dining</i>Grocery</a>
+    <a class="waves-effect waves-light underline-hover btn-large grey darken-4" id="transaction-btnG" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">local_dining</i>Grocery</a>
         <table class="table" id="transactionsG" align="center" style="display:none; width:25%; margin-bottom:25px;">
             <tr style="border-bottom: 1px dotted #cfd8dc">
                 <th>Date</th>
@@ -87,7 +88,7 @@
                 </tr>
             }
         </table>
-    <a class="waves-effect waves-light lightBrown-hover btn-large sharpCorners grey darken-4" id="transaction-btnH" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">home</i>Housing</a>
+    <a class="waves-effect waves-light underline-hover btn-large grey darken-4" id="transaction-btnH" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">home</i>Housing</a>
     <table class="table" id="transactionsH" align="center" style="display:none; width:25%; margin-bottom:25px;">
         <tr style="border-bottom: 1px dotted #cfd8dc">
             <th>Date</th>
@@ -114,7 +115,7 @@
         }
     </table>
 
-    <a class="waves-effect waves-light btn-large lightBrown-hover sharpCorners grey darken-4" id="transaction-btnB" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">monetization_on</i>Bills</a>
+    <a class="waves-effect waves-light btn-large underline-hover grey darken-4" id="transaction-btnB" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">monetization_on</i>Bills</a>
     <table class="table" id="transactionsB" align="center" style="display:none; width:25%; margin-bottom:25px;">
         <tr style="border-bottom: 1px dotted #cfd8dc">
             <th>Date</th>
@@ -141,7 +142,7 @@
         }
     </table>
 
-    <a class="waves-effect waves-light btn-large lightBrown-hover sharpCorners grey darken-4" id="transaction-btnE" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">local_activity</i>Entertainment</a>
+    <a class="waves-effect waves-light btn-large underline-hover grey darken-4" id="transaction-btnE" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">local_activity</i>Entertainment</a>
     <table class="table" id="transactionsE" align="center" style="display:none; width:25%; margin-bottom:25px;">
         <tr style="border-bottom: 1px dotted #cfd8dc">
             <th>Date</th>
@@ -168,7 +169,7 @@
         }
     </table>
 
-    <a class="waves-effect waves-light btn-large lightBrown-hover sharpCorners grey darken-4" id="transaction-btnGas" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">drive_eta</i>Gas</a>
+    <a class="waves-effect waves-light btn-large underline-hover grey darken-4" id="transaction-btnGas" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">drive_eta</i>Gas</a>
     <table class="table" id="transactionsGas" align="center" style="display:none; width:25%; margin-bottom:25px;">
         <tr style="border-bottom: 1px dotted #cfd8dc">
             <th>Date</th>
@@ -195,7 +196,7 @@
         }
     </table>
 
-    <a class="waves-effect waves-light btn-large lightBrown-hover sharpCorners grey darken-4" id="transaction-btnM" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">gesture</i>Miscellaneous</a>
+    <a class="waves-effect waves-light btn-large underline-hover grey darken-4" id="transaction-btnM" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">gesture</i>Miscellaneous</a>
     <table class="table" id="transactionsM" align="center" style="display:none; width:25%; margin-bottom:15px;">
         <tr style="border-bottom: 1px dotted #cfd8dc">
             <th>Date</th>
@@ -222,12 +223,6 @@
         }
     </table>
 </div>
-
-<style>
-    .lightBrown-hover:hover {
-        text-decoration: underline;
-    }
-</style>
 
 <script>
     $(document).ready(function () {
