--- a/MyWebsite/Views/Budgets/BudgetInsights.cshtml
+++ b/MyWebsite/Views/Budgets/BudgetInsights.cshtml
@@ -1,8 +1,8 @@
 ﻿
-<div style="text-align:center; margin-top:100px;"><p style="text-align:center;">@Html.Partial("_LoginPartial", 1)</p></div>
-<h3 style="text-align:center; margin-top:100px; text-decoration: underline">The Painless Budget</h3>
+<div class="partialLoginText"><p>@Html.Partial("_LoginPartial", 1)</p></div>
+<h3 class="painlessBudgetTitle">The Painless Budget</h3>
 <div style="margin-top: 25px; text-align: center;">
-    <a href='@Url.Action("Index", "Budgets")'; class="waves-effect waves-light btn-large sharpCorners lightBrown-hover grey darken-4" style="font-weight: bold; font-size: 20px;"><i class="material-icons left">arrow_back</i>Return to Budget</a>
+    <a href='@Url.Action("Index", "Budgets")'; class="waves-effect waves-light btn-large underline-hover grey darken-4" style="font-weight: bold; font-size: 20px;"><i class="material-icons left">arrow_back</i>Return to Budget</a>
 </div>
 
 <div class="row" style="padding: 80px;">
@@ -98,12 +98,12 @@
         <div style="margin-top: 20px; background-color: #080C10; font-size: 20px;" id="tab3" class="col s12 white-text flow-text waves-ripple">
             <div class="row">
                 <div class="col s12 m8" style="float: right">
-                    <button id="food" class="waves-effect waves-light btn-large lightBrown-hover sharpCorners" style="background-color:#54b798; font-weight:bold; font-size:13px; margin-top: 5px;"><i class="material-icons left">local_dining</i>Food</button>
-                    <button id="housing" class="waves-effect waves-light btn-large lightBrown-hover sharpCorners" style="background-color:#54b798; font-weight:bold; font-size:13px; margin-top: 5px;"><i class="material-icons left">home</i>Housing</button>
-                    <button id="bills" class="waves-effect waves-light btn-large lightBrown-hover sharpCorners" style="background-color:#54b798; font-weight:bold; font-size:13px; margin-top: 5px;"><i class="material-icons left">monetization_on</i>Bills | Payments</button>
-                    <button id="entertainment" class="waves-effect waves-light btn-large lightBrown-hover sharpCorners" style="background-color:#54b798; font-weight:bold; font-size:13px; margin-top: 5px;"><i class="material-icons left">local_activity</i>Entertainment</button>
-                    <button id="gas" class="waves-effect waves-light btn-large lightBrown-hover sharpCorners" style="background-color:#54b798; font-weight:bold; font-size:13px; margin-top: 5px;"><i class="material-icons left">drive_eta</i>Gas | Auto</button>
-                    <button id="misc" class="waves-effect waves-light btn-large lightBrown-hover sharpCorners" style="background-color:#54b798; font-weight:bold; font-size:13px; margin-top: 5px;"><i class="material-icons left">gesture</i>Misc</button>
+                    <button id="food" class="waves-effect waves-light btn-large underline-hover" style="background-color:#54b798; font-weight:bold; font-size:13px; margin-top: 5px;"><i class="material-icons left">local_dining</i>Food</button>
+                    <button id="housing" class="waves-effect waves-light btn-large underline-hover" style="background-color:#54b798; font-weight:bold; font-size:13px; margin-top: 5px;"><i class="material-icons left">home</i>Housing</button>
+                    <button id="bills" class="waves-effect waves-light btn-large underline-hover" style="background-color:#54b798; font-weight:bold; font-size:13px; margin-top: 5px;"><i class="material-icons left">monetization_on</i>Bills | Payments</button>
+                    <button id="entertainment" class="waves-effect waves-light btn-large underline-hover" style="background-color:#54b798; font-weight:bold; font-size:13px; margin-top: 5px;"><i class="material-icons left">local_activity</i>Entertainment</button>
+                    <button id="gas" class="waves-effect waves-light btn-large underline-hover" style="background-color:#54b798; font-weight:bold; font-size:13px; margin-top: 5px;"><i class="material-icons left">drive_eta</i>Gas | Auto</button>
+                    <button id="misc" class="waves-effect waves-light btn-large underline-hover" style="background-color:#54b798; font-weight:bold; font-size:13px; margin-top: 5px;"><i class="material-icons left">gesture</i>Misc</button>
 
                     
                 </div>
