--- a/MyWebsite/Views/Projects/Index.cshtml
+++ b/MyWebsite/Views/Projects/Index.cshtml
@@ -5,7 +5,9 @@
     <p style="text-align: center"><a href="https://www.linkedin.com/in/jordynrachelthompson/" target="_blank"><i id="gitHubIcon" style="color: #525e78; font-size: 50px;" class="fab fa-github z-depth-5"></i></a></p>
     <div class="container center-div z-depth-5 darkBox">
         <ul>
-            <li><a href='@Url.Action("Index", "Budgets")' class="purple-hover">The Painless Budget</a></li>
+            <li><a href='@Url.Action("Index", "Budgets")'; class="purple-hover">The Painless Budget</a></li>
         </ul>
     </div>
 </div>
+
+
